--- a/playlistListaCircular.ipynb
+++ b/playlistListaCircular.ipynb
@@ -87,7 +87,7 @@
     "playlist.adicionar_musica('Future Days - Pearl Jam')\n",
     "playlist.adicionar_musica('Whisky a go-go - Roupa Nova')\n",
     "playlist.adicionar_musica('Sem medo eu vou - Frei Gilson')\n",
-    "playlist.adicionar_musica('Don`t stop believin - Jorney')"
+    "playlist.adicionar_musica('Don`t stop believin - Journey')"
    ]
   },
   {
